fix drawer z-index

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -19,6 +19,7 @@ mdui-icon {
 }
 
 #drawer {
+  z-index: 12000;
   h1 {
     margin-top: 40px;
     margin-left: 16px;
